Position fixed for loading spinner, much smoother no flicker

--- a/src/app/page-loading-spinner/page-loading-spinner.component.scss
+++ b/src/app/page-loading-spinner/page-loading-spinner.component.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
   
     .spinner {
       font-size: 1.5em;
